Ajusta descrição task header

--- a/header.css
+++ b/header.css
@@ -1,7 +1,7 @@
 /* 
 Tasks: Jonas
 
-- Alterar a cor do background dos itens de menu utilizando a classe .list-item
+- Alterar a cor do background dos itens de menu para (#363) utilizando a classe .list-item
 - Definir o radius (borda arredondada) dos itens de menu para 10px utilizando a classe .list-item
 - Definir a cor do texto dos itens de menu para (#363) utilizando a classe .text-item
 - Alterar a fonte dos botões Entrar e Cadastre-se para 20px utilizando a classe .button
