--- a/content.css
+++ b/content.css
@@ -1,10 +1,15 @@
-/* 
-Tasks: Muhamed
+.title {
+    font-size: 24px;
+}
 
-- Alterar a fonte do titulo para 24px utilizando a classe .title
-- Alterar a cor do fundo do conteudo para #efefef utilizando a classe .content
-- Definir o radius (borda arredondada) do conteudo para 10px utilizando a classe .content
-- Definir o tamanho dos paragrafos para 20px utilizando o seletor de descendencia .content p
-- Definir o estilo da font do destaque para bold utilizando a classe .destaque
-- Definir o fundo do destaque para #8f8 utilizando a classe .destaque
-*/
+.content { 
+    background-color: #efefef;
+    border-radius: 10px;
+}
+ .content p {
+font-size: 20px;
+ }
+
+.destaque {
+    font-weight:bold;
+    background-color:#8f8 ;}
